--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -31,6 +31,15 @@
       <ion-button (click)="doSubmit()" expand="block" class="login-button">
         Log In
       </ion-button>
+
+      <ion-alert
+        header="Login Gagal"
+        subHeader="Email atau Password salah"
+        message="Silakan periksa kembali informasi login Anda."
+        [isOpen]="showAlert"
+        (didDismiss)="showAlert = false"
+        buttons="OK"
+      ></ion-alert>
     </div>
   </div>
 </ion-content>
