--- a/src/app/riwayat/riwayat.page.scss
+++ b/src/app/riwayat/riwayat.page.scss
@@ -1,5 +1,3 @@
-/* styles.scss atau global.scss */
-
 @import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
 
 ion-title {
@@ -24,6 +22,16 @@ ion-avatar img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 16px;
+  box-sizing: border-box;
+}
+
+.submission-history-title {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  text-align: center;
 }
 
 .center-section {
@@ -35,8 +43,7 @@ ion-avatar img {
 .title {
   font-size: 20px;
   font-weight: bold;
-  margin-top: 16px;
-  margin-bottom: 24px;
+  margin: 16px 0 24px;
 }
 
 .pending-box {
@@ -63,6 +70,11 @@ ion-avatar img {
 }
 
 ion-card {
+  width: 100%;
+  max-width: 600px;
+  box-sizing: border-box;
+  padding: 0 16px; /* Jaga isi agar tidak nempel tepi */
+  margin: 0 auto 16px auto; /* Tengah + spasi bawah */
   border-radius: 16px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
@@ -111,4 +123,12 @@ ion-text[color="success"] {
 ion-text[color="danger"] {
   font-weight: bold;
   color: #eb445a;
+}
+
+.card-detail {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  font-size: 14px;
+  color: #333;
 }
