--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
         <ion-icon name="checkmark-done-outline" slot="start"></ion-icon>
         <ion-label>Approvals</ion-label>
       </ion-item>
-      <ion-item routerLink="/discuss">
+      <ion-item routerLink="/komentar">
         <ion-icon name="chatbubble-ellipses-outline" slot="start"></ion-icon>
         <ion-label>Komentar</ion-label>
       </ion-item>
