--- a/src/app/ajukan/ajukan.page.html
+++ b/src/app/ajukan/ajukan.page.html
@@ -3,12 +3,12 @@
     <div class="form-box">
       <ion-item lines="none">
         <ion-label position="stacked">NIP</ion-label>
-        <ion-input placeholder="Value"></ion-input>
+        <ion-input [(ngModel)]="nip" readonly></ion-input>
       </ion-item>
 
       <ion-item lines="none">
         <ion-label position="stacked">Nama</ion-label>
-        <ion-input placeholder="Value"></ion-input>
+        <ion-input [(ngModel)]="nama" readonly></ion-input>
       </ion-item>
 
       <ion-item lines="none">
