--- a/src/app/ajukan/ajukan.page.html
+++ b/src/app/ajukan/ajukan.page.html
@@ -18,7 +18,7 @@
 
       <ion-item lines="none">
         <ion-label position="stacked">Tanggal</ion-label>
-        <ion-input placeholder="Value" type="date"></ion-input>
+        <ion-input type="date" [(ngModel)]="tanggal"></ion-input>
       </ion-item>
 
       <ion-item lines="none">
