--- a/src/app/ajukan/ajukan.page.scss
+++ b/src/app/ajukan/ajukan.page.scss
@@ -50,3 +50,9 @@ ion-item {
   text-transform: none;
   margin-top: 8px;
 }
+
+.cuti-label {
+  font-size: 14px;
+  color: var(--ion-color-medium);
+  margin-left: auto;
+}
