--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,11 @@
 <ion-content [fullscreen]="true">
-  <div id="container">
+  <!-- Splash screen -->
+  <div *ngIf="isSplashVisible" class="splash-screen">
+    <img src="assets/icon/logo.png" class="splash-logo" />
+  </div>
+
+  <!-- Form login -->
+  <div *ngIf="!isSplashVisible" id="container">
     <div class="logo-container">
       <img src="assets/icon/logo.png" alt="Aventrex Logo" class="logo" />
       <h1 class="brand-name">AVENTREX</h1>
@@ -28,9 +34,9 @@
         ></ion-icon>
       </ion-item>
 
-      <ion-button (click)="doSubmit()" expand="block" class="login-button">
-        Log In
-      </ion-button>
+      <ion-button (click)="doSubmit()" expand="block" class="login-button"
+        >Log In</ion-button
+      >
 
       <ion-alert
         header="Login Gagal!"
