--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -139,3 +139,45 @@ ion-item {
     transform: translateX(0);
   }
 }
+
+.splash-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: #ffffff;
+  animation: fadeOut 0.5s ease-out forwards;
+  animation-delay: 2s;
+}
+
+.splash-logo {
+  width: 200px;
+  height: 200px;
+  animation: scaleUp 1.5s ease-in-out;
+}
+
+.brand-name {
+  font-size: 24px;
+  margin-top: 10px;
+  font-weight: bold;
+  color: #000;
+}
+
+@keyframes scaleUp {
+  0% {
+    transform: scale(0.2);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
