--- a/src/app/template/template.page.html
+++ b/src/app/template/template.page.html
@@ -28,7 +28,9 @@
               <h3>Surat Cuti</h3>
               <p>HRD (DOCX)</p>
             </ion-label>
-            <ion-button fill="clear" size="small">Unduh</ion-button>
+            <a href="assets/files/surat-cuti.docx" download>
+              <ion-button fill="clear" size="small">Unduh</ion-button>
+            </a>
           </ion-item>
 
           <ion-item>
@@ -37,7 +39,9 @@
               <h3>Surat Rekomendasi</h3>
               <p>HRD (PDF)</p>
             </ion-label>
-            <ion-button fill="clear" size="small">Unduh</ion-button>
+            <a href="assets/files/surat-rekomendasi.pdf" download>
+              <ion-button fill="clear" size="small">Unduh</ion-button>
+            </a>
           </ion-item>
 
           <ion-item>
@@ -46,7 +50,9 @@
               <h3>Surat Ket-Kerja</h3>
               <p>HRD (PDF)</p>
             </ion-label>
-            <ion-button fill="clear" size="small">Unduh</ion-button>
+            <a href="assets/files/surat-ket-kerja.pdf" download>
+              <ion-button fill="clear" size="small">Unduh</ion-button>
+            </a>
           </ion-item>
 
           <ion-item lines="none">
@@ -55,7 +61,9 @@
               <h3>Surat Keluhan</h3>
               <p>GA (DOCX)</p>
             </ion-label>
-            <ion-button fill="clear" size="small">Unduh</ion-button>
+            <a href="assets/files/surat-keluhan.docx" download>
+              <ion-button fill="clear" size="small">Unduh</ion-button>
+            </a>
           </ion-item>
         </ion-list>
       </ion-card-content>
