--- a/src/app/upload/upload.page.html
+++ b/src/app/upload/upload.page.html
@@ -10,8 +10,13 @@
           <ion-icon name="folder-open-outline" size="large"></ion-icon>
         </ion-item>
 
-        <div class="drag-drop-box">
+        <div
+          class="drag-drop-box"
+          (dragover)="onDragOver($event)"
+          (drop)="onDrop($event)"
+        >
           <p>You can drag and drop<br />files here to add them</p>
+          <p *ngIf="uploadedFile">{{ uploadedFile.name }}</p>
         </div>
 
         <ion-button
