--- a/src/app/komentar/komentar.page.html
+++ b/src/app/komentar/komentar.page.html
@@ -11,35 +11,23 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-card class="comment-card">
-    <ion-item lines="none" class="comment-header">
-      <ion-avatar slot="start">
-        <img src="assets/img/user.png" />
-      </ion-avatar>
-      <ion-label>
-        <h2><strong>Jimmy Ahyari</strong> via Google+</h2>
-        <p class="comment-meta">1 week ago</p>
-      </ion-label>
-    </ion-item>
-
-    <ion-card-content class="comment-text">
-      Yuk.. Jadi Konsumen yang cerdas; Yang paham akan hak dan kewajibannya
-      sebagai Konsumen :)
-    </ion-card-content>
-
-    <div class="comment-actions">
-      <div>
-        <ion-icon name="thumbs-up-outline"></ion-icon>
-        <span>+1</span>
-      </div>
-      <ion-button fill="clear" size="small">Reply</ion-button>
+  <ion-content class="chat-page">
+    <div class="chat-header">
+      <ion-icon name="person-outline" class="profile-icon"></ion-icon>
+      <span class="chat-identity">2012372 AHMAD MUHAMMAD</span>
     </div>
-  </ion-card>
 
-  <div class="comment-box">
-    <ion-textarea placeholder="Add a comment"></ion-textarea>
-    <ion-button expand="block" color="primary" class="comment-button">
-      Comment
-    </ion-button>
-  </div>
+    <div class="chat-body">
+      <!-- Di sini bisa ditambahkan list pesan jika ada -->
+    </div>
+
+    <div class="chat-footer">
+      <ion-textarea
+        placeholder="Add a message"
+        auto-grow="true"
+        class="chat-input"
+      ></ion-textarea>
+      <ion-button class="send-button">Send</ion-button>
+    </div>
+  </ion-content>
 </ion-content>
